--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-clickhouse (1.1.54281) unstable; urgency=low
+clickhouse (1.1.54282) unstable; urgency=low
 
   * Modified source code
 
- --  <robot-metrika-test@yandex-team.ru>  Wed, 23 Aug 2017 15:09:15 +0300
+ -- proller <proller@yandex-team.ru>  Wed, 30 Aug 2017 18:01:38 +0300
